--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h3>Engineering Student | Aspiring Full-Stack Developer</h3>
       <p>Email: <a href="mailto:jejjari.vinay@gmail.com">jejjari.vinay@gmail.com</a></p>
       <p>GitHub: <a href="https://github.com/vinay26-git" target="_blank">github.com/vinay26-git</a></p>
-      <p>LinkedIn: <a href="www.linkedin.com/in/vinay-jejjari-505857258" target="_blank">vinay-jejjari-505857258</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/vinay-jejjari-505857258" target="_blank">linkedin.com/in/vinay-jejjari</a></p>
       <p>Location: Hyderabad, India</p>
     </div>
     <div class="hero-right">
