--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         Built a Streamlit app for real-time website querying using Selenium and AI models for semantic search.
       </p>
       <p><strong>Technologies:</strong> Python, Streamlit, Selenium, NLP</p>
-      <a href="https://github.com/vinay26-git/Scrapy.AI" target="_blank">View on GitHub</a>
+      <a href="https://github.com/vinay26-git/scrapy-ai" target="_blank">View on GitHub</a>
     </div>
     <div class="project-card">
       <h3>ChatApp</h3>
