--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       </p>
       <p><strong>Technologies:</strong> Python, Google API</p>
       <a href="https://github.com/vinay26-git/HR-Leave-Automation" target="_blank">View on GitHub</a>
+      <a href="https://vinay26-git.github.io/HR-Leave-Automation/" target="_blank">View on Live Demo</a>
     </div>
     <div class="project-card">
       <h3>Scrapy.AI</h3>
@@ -80,6 +81,7 @@
       </p>
       <p><strong>Technologies:</strong> Python, Streamlit, Selenium, NLP</p>
       <a href="https://github.com/vinay26-git/scrapy-ai" target="_blank">View on GitHub</a>
+      <a href="https://scrapy-ai-5tsbwye2gyggfqhcflegqn.streamlit.app/" target="_blank">View on Live Demo</a>
     </div>
     <div class="project-card">
       <h3>ChatApp</h3>
