--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
       <div class="project-card" id="hr-project">
         <div class="card-content">
           <h2>HR-Leave-Automation</h2>
-          <p>A Python-based system that streamlines employee leave management by automating approvals, email notifications, and monthly summaries using Google Suite.</p>
-          <p><strong>Technologies:</strong> Python, Google API</p>
+          <p>HR Leave Automation is a Python-based system that streamlines employee leave management by automating daily approvals, email notifications, and monthly summaries. Integrated with Google Sheets, Gmail, and Google Drive, it simplifies HR workflows, reduces manual efforts.</p>
+          <p><strong>Technologies:</strong> Python, Google API, HTML&CSS</p>
           <div class="card-links">
             <a href="https://github.com/vinay26-git/HR-Leave-Automation" target="_blank">View on GitHub</a>
             <a href="https://vinay26-git.github.io/HR-Leave-Automation/" target="_blank">Live Demo</a>
@@ -131,7 +131,7 @@
       <div class="project-card" id="scrapy-project">
         <div class="card-content">
           <h2>Scrapy.AI</h2>
-          <p>A Streamlit app for real-time website querying. It uses Selenium for scraping, Sentence Transformers for semantic search, and Gemini AI for accurate answers.</p>
+          <p>Scrapy-AI is a Streamlit-based chatbot that lets you interact with and query website content in real time. It combines Selenium web scraping, semantic search with Sentence Transformers, and Gemini AI to provide accurate, reference-backed answers from any website.</p>
           <p><strong>Technologies:</strong> Python, Streamlit, Selenium</p>
           <div class="card-links">
             <a href="https://github.com/vinay26-git/scrapy-ai" target="_blank">View on GitHub</a>
@@ -170,7 +170,8 @@
         </a>
         <div class="contact-detail-item">
           <i class="fas fa-map-marker-alt"></i>
-          <span>JNTU, Hyderabad, India</span>
+          <a href="https://maps.app.goo.gl/Q999Pgef8uoBZQmq9?g_st=aw" target="_blank" style="text-decoration:none; color:inherit;">
+            JNTU, Hyderabad, India</a>
         </div>
       </div>
     </div>
@@ -183,3 +184,4 @@
 </body>
 
 </html>
+
