--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
           Adaptable and motivated professional with a strong foundation in software development, artificial intelligence, and automation technologies. Skilled in analyzing problems, learning new tools quickly, and applying innovative solutions to real-world challenges.
           <br><br>
           Passionate about building efficient, scalable, and user-friendly applications that add value to businesses and end users. Eager to contribute to impactful projects while continuously upgrading my technical skills.
-        </p>
+        </p
+            <p>You can download my Resume.</p>
         <a href="files/Vinay_Jejjari_Resume.pdf" class="btn-download" download>
           <i class="fas fa-download"></i> Download Resume
         </a>
@@ -121,7 +122,7 @@
         <div class="card-content">
           <h2>HR-Leave-Automation</h2>
           <p>HR Leave Automation is a Python-based system that streamlines employee leave management by automating daily approvals, email notifications, and monthly summaries. Integrated with Google Sheets, Gmail, and Google Drive, it simplifies HR workflows, reduces manual efforts.</p>
-          <p><strong>Technologies:</strong> Python, Google API, HTML&CSS</p>
+          <p><strong>Technologies:</strong> Python, Google API</p>
           <div class="card-links">
             <a href="https://github.com/vinay26-git/HR-Leave-Automation" target="_blank">View on GitHub</a>
             <a href="https://vinay26-git.github.io/HR-Leave-Automation/" target="_blank">Live Demo</a>
@@ -142,7 +143,7 @@
       <div class="project-card" id="chat-project">
         <div class="card-content">
           <h2>ChatApp</h2>
-          <p>A WhatsApp clone with features like real-time messaging, mobile login, chat search, user settings, and a clean chat interface.</p>
+          <p>A full-featured WhatsApp-style chat application designed to provide real-time communication with secure login through Google authentication. This app demonstrates how to integrate third-party OAuth providers into a messaging platform while maintaining the familiar, clean, and mobile-friendly chat interface.</p>
           <p><strong>Technologies:</strong> Python, HTML/CSS, JavaScript</p>
           <div class="card-links">
             <a href="https://github.com/vinay26-git/ChatApp" target="_blank">View on GitHub</a>
@@ -184,4 +185,5 @@
 </body>
 
 </html>
+
 
