Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <p>
             <strong>Gen AI Intern</strong><br>
             <a href="https://quiddityinfotech.com/" target="_blank">Quiddity Infotech Pvt.Ltd., Hyderabad.</a><br>
-            <em>(June 2025 - Present)</em>
+            <em>(June 2025 - Dec 2025)</em>
           </p>
         </div>
       </div>
@@ -192,5 +192,6 @@
 </body>
 
 </html>
+
 
 
